[package]
name = "rfxtrx433"
version = "0.1.0"
authors = ["Fredrik Jansson <fredrik.jansson.se@gmail.com>"]
edition = "2018"

[dependencies]
bitflags = "1.2"
log="0.4"
num-traits = "0.2"
num-derive = "0.3"
serialport="3.3"
thiserror="1"
tokio = { version = "0.2", features = ["rt-core", "macros", "io-util", "time", "sync" ] }
tokio-serial = "4"
