[package]
name = "rfxtrx433"
version = "0.1.0"
authors = ["Fredrik Jansson <fredrik.jansson.se@gmail.com>"]
edition = "2018"

[dependencies]
bitflags = "1.2"
log="0.4"
num-traits = "0.2"
num-derive = "0.3"
serialport="4"
thiserror="1"
tokio = { version = "1", features = ["macros", "io-util", "rt", "time", "sync" ] }
tokio-serial = "5.4.0-beta4"
